fix overflow bug on touch-screen

--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,19 @@
   src: url("../fonts/jost-v4-latin-800.woff") format("woff");
 }
 
+html {
+  box-sizing: border-box;
+}
+
+* {
+  box-sizing: inherit;
+}
+
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   max-width: 100vw;
   max-height: 100vh;
@@ -301,6 +314,40 @@ mark {
   cursor: pointer;
 }
 
+.touch {
+  max-width: none;
+  max-height: none;
+  min-height: calc(100vh - 400px);
+  overflow: visible;
+  padding-bottom: 200px;
+}
+
+.touch .header,
+.touch .footer {
+  position: static;
+  -webkit-transform: rotate(0) translateX(0);
+      -ms-transform: rotate(0) translateX(0);
+          transform: rotate(0) translateX(0);
+}
+
+.touch .header:hover + .shadow,
+.touch .footer:hover + .shadow {
+  z-index: -1;
+  opacity: 0;
+}
+
+.touch .main {
+  width: auto;
+  height: auto;
+  min-height: calc(100vh - 400px);
+  padding: 70px 0;
+}
+
+.touch .footer {
+  position: absolute;
+  bottom: 0;
+}
+
 @media screen and (max-width: 870px) {
   .main__content {
     -webkit-justify-content: center;
@@ -374,6 +421,15 @@ mark {
     line-height: 20px;
     height: 20px;
   }
+
+  .touch {
+    padding-bottom: 120px;
+    min-height: calc(100vh - 240);
+  }
+
+  .touch .main {
+    min-height: calc(100vh - 240px);
+  }
 }
 
 @media screen and (max-width: 525px) {
@@ -406,6 +462,15 @@ mark {
 
   .footer__nav {
     margin: 41px 0 0 27px;
+  }
+
+  .touch {
+    padding-bottom: 100px;
+    min-height: calc(100vh - 200px);
+  }
+
+  .touch .main {
+    min-height: calc(100vh - 200px);
   }
 }
 
